Fixes #1060:  properly align text with pencil

--- a/components/navigationBar/index.less
+++ b/components/navigationBar/index.less
@@ -29,13 +29,15 @@
     .edit-app-name {
         display: flex;
         justify-content: space-between;
-        p {
-            margin-top: 18px;
-        }
+    }
+
+    p {
+        margin: 3px 0 0;
     }
 
     .hide-text-overflow {
         flex-grow: 1;
+        margin: 0;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
